--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,35 +6,6 @@
 # # separate terms of service, privacy policy, and support
 # # documentation.
 
-# name: Java CI with Maven
-
-# on:
-#   push:
-#     branches: [ "main" ]
-#   pull_request:
-#     branches: [ "main" ]
-
-# jobs:
-#   build:
-
-#     runs-on: ubuntu-latest
-
-#     steps:
-#     - uses: actions/checkout@v4
-#     - name: Set up JDK 21
-#       uses: actions/setup-java@v4
-#       with:
-#         java-version: '21'
-#         distribution: 'temurin'
-#         cache: maven
-#     - name: Build with Maven
-#       run: mvn -B package --file pom.xml
-
-#     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-#     - name: Update dependency graph
-#       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
-
-
 name: Java CI with Maven
 
 on:
@@ -83,10 +54,10 @@ jobs:
           rm -r app/mac
           java -jar packr/packr-all-4.0.0.jar packr/packr-config_mac.json
 
-      - name: Run Packr for Linux
-        run: |
-          rm -r app/lin
-          java -jar packr/packr-all-4.0.0.jar packr/packr-config_lin.json
+      # - name: Run Packr for Linux
+      #   run: |
+      #     rm -r app/lin
+      #     java -jar packr/packr-all-4.0.0.jar packr/packr-config_lin.json
 
       - name: Archive packaged app
         uses: actions/upload-artifact@v4
