--- a/packr/packr-config_mac.json
+++ b/packr/packr-config_mac.json
@@ -11,7 +11,9 @@
   ],
   "resources": [
     "target/python",
-    "target/python-scripts"
+    "target/python-scripts",
+    "target/profiles",
+    "target/SQMData"
   ],
   "icon": "src/main/resources/icon/moth.ico",
   "minimizejre": "soft",
