--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,8 +38,14 @@ jobs:
         with:
           node-version: '18'
 
-      - name: Build project with Maven
-        run:  .\mvnw.cmd clean package
+      - name: Install Maven
+        run: sudo apt-get update && sudo apt-get install -y maven
+
+
+      - name: Build project w/ Maven
+        run: mvn clean package
+      # - name: Build project with Maven
+      #   run:  ./mvnw clean package
 
       - name: Run Packr for windows
         run: |
