--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -53,7 +53,7 @@ jobs:
           java -jar packr/packr-all-4.0.0.jar packr/packr-config_win.json
 
 #      - name: Run Inno-Setup for windows
-#        run: |
+#        run: '"C:\Program Files (x86)\Inno Setup 6\ISCC.exe" inno-setup/installer.iss'
           
 
       - name: Run Packr for Mac
@@ -61,21 +61,32 @@ jobs:
           rm -r app/mac
           java -jar packr/packr-all-4.0.0.jar packr/packr-config_mac.json
 
-      # - name: Run Packr for Linux
+#      - name: Wrap to .dmg for Mac
+#        run: |
+#          npm install -g create-dmg
+#          npx create-dmg 'app/mac/MPR-Bio-Remote.app' \
+#            --overwrite \
+#            --dmg-title="MPR-Bio-Remote" \
+#            --icon "MPR-Bio-Remote.app" 150 150 \
+#            --window-size 500 300 \
+#            --app-drop-link 350 150 \
+#            dist/
+
+# - name: Run Packr for Linux
       #   run: |
       #     rm -r app/lin
       #     java -jar packr/packr-all-4.0.0.jar packr/packr-config_lin.json
 
-      - name: Archive packaged app
-        uses: actions/upload-artifact@v4
-        with:
-          name: mpr-bio-remote
-          path: |
-            app/win/**
-            app/mac/**
-            app/lin/**
-            target/**
-
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-      - name: Update dependency graph
-        uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+#      - name: Archive packaged app
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: mpr-bio-remote
+#          path: |
+#            app/win/**
+#            app/mac/**
+#            app/lin/**
+#            target/**
+#
+#    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
+#      - name: Update dependency graph
+#        uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
